Yes I hate intellij too now, not just gradle...